# paralell_programming_hw1

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.development  Makefile  README.md
.devcontainer/: devcontainer.json
benchmark/: CMakeLists.txt  bSimulator.hpp  main.cpp
homework10/: laplace2d.cu  reduce.cu
include/: MPIHandler.hpp  MPILaplace.hpp  simulator.hpp
mpi/: .clang-format  CMakeLists.txt  Dockerfile.development  Makefile
mpi/.devcontainer/: devcontainer.json
mpi/cmake/: CompilerWarnings.cmake
mpi/include/: bigArray.hpp  cannon.hpp  mpiCart.hpp  pi.hpp  pingPong.hpp
mpi/src/: CMakeLists.txt  bigArray.cpp  cannon.cpp  main.cpp  mpiCart.cpp  pi.cpp  pingPong.cpp
src/: CMakeLists.txt  MPIHandler.cpp  MPILaplace.cpp  main.cpp  simulator.cpp
test/: CMakeLists.txt  main.cpp  tSimulator.cpp
